{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 33,
  "lineage": "103089e9-9fb5-56df-c33d-197610ab8e5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tic_tac_toe_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef12ee7bc073414",
            "arn": "arn:aws:ec2:us-east-1:821936124268:instance/i-05801116842e3bb6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05801116842e3bb6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "labskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d40ce7fbde89f759",
            "private_dns": "ip-10-0-1-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.112",
            "public_dns": "ec2-44-210-137-192.compute-1.amazonaws.com",
            "public_ip": "44.210.137.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-070fdc11b48c1ab03",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad0d4511f3ff2f51",
            "tags": {
              "Name": "TicTacToeInstance"
            },
            "tags_all": {
              "Name": "TicTacToeInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a59667187b77372"
            ]
          },
          "dependencies": [
            "aws_security_group.tic_tac_toe_sg",
            "aws_subnet.tic_tac_toe_subnet",
            "aws_vpc.tic_tac_toe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tic_tac_toe_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821936124268:internet-gateway/igw-05d930974a76b5033",
            "id": "igw-05d930974a76b5033",
            "owner_id": "821936124268",
            "tags": {
              "Name": "TicTacToeIGW"
            },
            "tags_all": {
              "Name": "TicTacToeIGW"
            },
            "vpc_id": "vpc-06d57095b939fef26"
          },
          "dependencies": [
            "aws_vpc.tic_tac_toe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tic_tac_toe_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821936124268:route-table/rtb-0b67d103f01c474dd",
            "id": "rtb-0b67d103f01c474dd",
            "owner_id": "821936124268",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d930974a76b5033",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TicTacToeRouteTable"
            },
            "tags_all": {
              "Name": "TicTacToeRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d57095b939fef26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tic_tac_toe_igw",
            "aws_vpc.tic_tac_toe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tic_tac_toe_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccfdbeeb1510a02d",
            "route_table_id": "rtb-0b67d103f01c474dd",
            "subnet_id": "subnet-0ad0d4511f3ff2f51"
          },
          "dependencies": [
            "aws_internet_gateway.tic_tac_toe_igw",
            "aws_route_table.tic_tac_toe_rt",
            "aws_subnet.tic_tac_toe_subnet",
            "aws_vpc.tic_tac_toe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tic_tac_toe_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821936124268:security-group/sg-04a59667187b77372",
            "description": "Security group for Tic-Tac-Toe application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a59667187b77372",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tic-tac-toe-sg",
            "name_prefix": "",
            "owner_id": "821936124268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TicTacToeSecurityGroup"
            },
            "tags_all": {
              "Name": "TicTacToeSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d57095b939fef26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tic_tac_toe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tic_tac_toe_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821936124268:subnet/subnet-0ad0d4511f3ff2f51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad0d4511f3ff2f51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821936124268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TicTacToeSubnet"
            },
            "tags_all": {
              "Name": "TicTacToeSubnet"
            },
            "vpc_id": "vpc-06d57095b939fef26"
          },
          "dependencies": [
            "aws_vpc.tic_tac_toe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tic_tac_toe_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821936124268:vpc/vpc-06d57095b939fef26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004cdbac29cd2c15b",
            "default_route_table_id": "rtb-0995523e3a52f39c6",
            "default_security_group_id": "sg-03e1e03fa038ba955",
            "dhcp_options_id": "dopt-0ca5817d87ffb2876",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d57095b939fef26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0995523e3a52f39c6",
            "owner_id": "821936124268",
            "tags": {
              "Name": "TicTacToeVPC"
            },
            "tags_all": {
              "Name": "TicTacToeVPC"
            }
          }
        }
      ]
    }
  ]
}